<resources>
    <string name="app_name">Habit</string>
    <string name="title_activity_tutorial2username">tutorial_2username</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_greeting">Hey there!\n\nPlease sign up or log in.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email_tutorial3">Please enter your email:</string>
    <string name="password_tutorial3">Please enter your password:</string>
    <string name="title_activity_tutorial3enterhabit">tutorial_3enterhabit</string>
    <string name="title_activity_tutorial4freq">tutorial_4freq</string>
    <string name="following_list_title">Following</string>
    <string name="today_button_text">Today</string>
    <string name="all_button_text">All</string>
    <string name="TEMP_habit_list_greeting">Hey, Username</string>
    <string name="requests_heading">Friends</string>
    <string name="feed_heading">Feed</string>

    <!--  Logging tags for database operations  -->
    <string name="db_add_success">DB ADD SUCCESS</string>
    <string name="db_add_fail">DB ADD FAIL</string>
    <string name="db_edit_success">DB EDIT SUCCESS</string>
    <string name="db_edit_fail">DB EDIT FAIL</string>
    <string name="db_delete_success">DB DELETE SUCCESS</string>
    <string name="db_delete_fail">DB DELETE FAIL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="display_name_prompt">Welcome to Habit!\n\nWhat should we call you?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location_permission_denied">0</string>
    <string name="permission_required_toast">1</string>
    <string name="permission_rationale_location">location</string>
    <string name="maps_api_key">AIzaSyDhrBnPkVHgMjDE6S4ieafB_dHXS3GSUCU</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>