<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark_Gray_Background"
    tools:context=".HabitListActivity">

    <ListView
        android:id="@+id/habit_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/following_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners_button_clicked"
        android:fontFamily="@font/lato_bold"
        android:text="@string/all_button_text"
        android:textAllCaps="false"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corners_button_not_clicked"
        android:fontFamily="@font/lato_bold"
        android:text="@string/today_button_text"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/TEMP_habit_list_greeting"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/following_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/following_list_title"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/following_list"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/Dark_Gray_Background"
        app:layout_constraintBottom_toBottomOf="@+id/following_label"
        app:layout_constraintStart_toEndOf="@+id/following_label"
        app:layout_constraintTop_toTopOf="@+id/following_label"
        app:srcCompat="@drawable/ic_baseline_format_list_bulleted_24"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/add_habit_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="24dp"
        android:background="@color/Dark_Gray_Background"
        app:tint="@color/Lighter_Gray_Text"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <ListView
        android:id="@+id/following_list"
        android:layout_width="409dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>